# tuber_graphics_opengl

./: .gitignore  .travis.yml  Cargo.toml  README.md
data/: 64x64.jbb  64x64b.jbb  default.vert  default_font.jbb  default_font2.jbb  text.vert  textured.frag  textured.vert
data/fonts/: default_font.fnt  default_font2.fnt
data/shaders/: default.jbb  shader.jbb
examples/: draw_point.rs  ex1.rs  ex2.rs  ex3.rs  ex4.rs  opengl1.rs  opengl2.rs  opengl3.rs  opengl4.rs  opengl5.rs
examples/shaders/: ex2.frag  ex2.vert  ex3.vert  ex4.frag  ex4.vert  triangle.frag  triangle.vert
src/: font.rs  lib.rs  memory_utils.rs  opengl.rs  shader.rs
