[package]
name = "tuber_graphics_opengl"
version = "0.1.0"
authors = ["Clément SIBILLE <claymeuns@protonmail.com>"]
edition = "2018"

[dependencies]
tuber_graphics = { git = "https://github.com/Lisible/tuber_graphics" }
gl = "0.11.0"

[dev-dependencies]
tuber = { git = "https://github.com/Lisible/tuber" }
tuber_window_sdl2 = { git = "https://github.com/Lisible/tuber_window_sdl2" }

[dev-dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]

